--- a/admin_add_product_page.html
+++ b/admin_add_product_page.html
@@ -9,11 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style/style_main.css">
-  <link rel="stylesheet" href="style/style_landing_page.css">
-<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/css/bootstrap-select.min.css" integrity="sha512-mR/b5Y7FRsKqrYZou7uysnOdCIJib/7r5QeJMFvLNHNhtye3xJp1TdJVPLtetkukFn227nKpXD9OjUc09lx97Q==" crossorigin="anonymous"
         referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style/style_main.css">
   <link rel="stylesheet" href="style/style_admin_app_product_page.css">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -24,228 +22,199 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-light p-0">
-      <div class="container-fluid">
-        <div class="col-md-1 col-2 me-">
-          <a href="landing_page.html">
-            <img class="navbar-brand  text-center" src="images/wtech_logo.png">
-          </a>
-        </div>
-        <div class="button_class_mobil pe-2">
-          <a href="shopping_card_page.html">
-            <button class="btn btn-outline-success">
-              <span class="bi bi-plus-square">
-                    <span class="d-none">Pridať produkt</span>
-                  </span>
-            </button>
-          </a>
-          <a href="#login">
-            <button class="btn btn-outline-success">
-              <span class="bi bi-person">
-                    <span class="d-none">Prihlásenie</span>
-                  </span>
-            </button>
-          </a>
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-        aria-controls="navbarScroll" aria-expanded="true" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <div id="ss" class="search_div">
-            <form class="d-flex me-4 formik">
-              <input class="form-control me-2 " type="search" placeholder="Vyhľadať tovar" aria-label="Search">
-              <button class="btn btn-outline-success " type="submit"><i class="bi bi-search">
-                <span class="d-md-none"></span>
-              </i></button>
-            </form>
-          </div>
-        </div>
-        <form class="d-flex me-4">
-          <input class="form-control me-2 " type="search" placeholder="Vyhľadať tovar" aria-label="Search">
-          <button class="btn btn-outline-success " type="submit"><i class="bi bi-search">
-            <span class="d-md-none"></span>
-          </i></button>
-        </form>
-        <div class="button_class">
-          <a href="shopping_card_page.html">
-            <button class="btn btn-outline-success">
-              <span class="bi bi-plus-square">
-                    <span class="button_spans">Pridať produkt</span>
-                  </span>
-            </button>
-          </a>
-          <a href="#login">
-            <button class="btn btn-outline-success">
-              <span class="bi bi-person">
-                    <span class="button_spans">Prihlásenie</span>
-                  </span>
-            </button>
-          </a>
-        </div>
-        <div id="login" class="overlay login_overlay">
-          <div class="wrapper wrapper_popup">
-            <a href="#" class="close">&times;</a>
-            <div class="column first_column">
-              <div class="signin">
-                <h1>Prihlásenie do účtu</h1>
-                <input type="email" placeholder="Emailová adresa">
-                <input type="password" placeholder="Heslo">
-                <a href="#" class="login_forgot">Zabudli ste heslo ?</a>
-                <button class="col-7 ms-3 btn form-submit">
-                  <i class="bi bi-box-arrow-in-right"> Prihlásiť sa</i>
-                </button>
-                <span class="login_span">Nemáte ešte účet? <button id="signup" class="login_button">Zaregistrovať
-                        sa</button></span>
-              </div>
-              <div class="signup">
-                <h1>Vytvorte si účet</h1>
-                <input type="email" placeholder="Emailová adresa">
-                <input type="password" placeholder="Heslo">
-                <input type="password" placeholder="Opakovať Heslo">
-                <button class="col-7 ms-3 btn form-submit">
-                  <i class="bi bi-person-plus"> Vytvoriť účet</i>
-                </button>
-                <span class="login_span">Máte už vytvorený účet? <button id="signin" class="login_button">Prihlásiť
-                        sa</button></span>
-              </div>
-
-            </div>
-
-            <div class="column second_column">
-              <div class="signin">
-                <img class="brand" src="images/wtech_logo.png">
-                <h3>Pohodlne nakupujte!</h3>
-              </div>
-              <div class="signup">
-                <img class="brand" src="images/wtech_logo.png">
-                <h3>Vytvorenie účtu je zadarmo!</h3>
-              </div>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-md navbar-light p-0">
+    <div class="container-fluid">
+      <div class="col-md-1 col-2 me-">
+        <a href="admin_main_page.html">
+          <img class="navbar-brand  text-center" src="images/wtech_logo.png">
+        </a>
+      </div>
+      <div class="button_class_mobil pe-2">
+        <a href="admin_add_product_page.html">
+          <button class="btn btn-outline-success">
+                <span class="bi bi-plus-square">
+                  <span class="d-none">Pridať produkt</span>
+                </span>
+          </button>
+        </a>
+        <a href="landing_page.html">
+          <button class="btn btn-outline-success">
+                <span class="bi bi-person">
+                  <span class="d-none">Odhlásiť sa</span>
+                </span>
+          </button>
+        </a>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+              aria-controls="navbarScroll" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <div id="ss" class="search_div">
+          <form class="d-flex me-4 formik">
+            <input class="form-control me-2 " type="search" placeholder="Vyhľadať tovar" aria-label="Search">
+            <button class="btn btn-outline-success " type="submit"><i class="bi bi-search">
+              <span class="d-md-none"></span>
+            </i></button>
+          </form>
         </div>
       </div>
-    </nav>
-  </header>
+      <form class="d-flex me-4">
+        <input class="form-control me-2 " type="search" placeholder="Vyhľadať tovar" aria-label="Search">
+        <button class="btn btn-outline-success " type="submit"><i class="bi bi-search">
+          <span class="d-md-none"></span>
+        </i></button>
+      </form>
+      <div class="button_class">
+        <a href="admin_add_product_page.html">
+          <button class="btn btn-outline-success">
+                <span class="bi bi-plus-square">
+                  <span class="button_spans">Pridať produkt</span>
+                </span>
+          </button>
+        </a>
+        <a href="landing_page.html">
+          <button class="btn btn-outline-success">
+                <span class="bi bi-person">
+                  <span class="button_spans">Odhlásiť sa</span>
+                </span>
+          </button>
+        </a>
+      </div>
+    </div>
+  </nav>
+</header>
 
-  <main>
-    <div class="container col-lg-6 col-md-8">
-      <div class="card-body bg-light">
-        <form>
-          <div class="form-outline mb-4">
-            <label class="form-label" for="productName">Názov produktu</label>
-            <input type="text" id="productName" class="form-control border-dark" />
-          </div>
+<main>
+  <section class="admin_section">
+    <div class="row col-12">
+      <h2 class="main_title col-12">Pridanie nového produktu</h2>
+      <div class="container col-lg-6 col-md-8">
+        <div class="card-body bg-light">
+          <form>
+            <div class="form-outline mb-4">
+              <label class="form-label" for="productName">Názov produktu</label>
+              <input type="text" id="productName" class="form-control border-dark"  placeholder="Názov produktu"/>
+            </div>
 
-          <div class="form-outline mb-4">
-            <label class="form-label" for="productPrice">Cena</label>
-            <input type="email" id="productPrice" class="form-control border-dark" />
-          </div>
-
-          <div class="form-outline mb-4">
-            <label class="form-label" for="productQuantity">Cena</label>
-            <input type="email" id="productQuantity" class="form-control border-dark" />
-          </div>
-
-          <div class="form-outline mb-4">
-            <label class="form-label" for="description">Popis</label>
-            <textarea class="form-control border-dark" id="description" rows="4"></textarea>
-          </div>
-
-          <div class="mb-3">
-            <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-            <input class="form-control border-dark" type="file" id="formFileMultiple" multiple>
-          </div>
-
-          <div class="row">
-            <div class="col col-lg-6 d-flex justify-content-center align-items-center">
-              <div class="form-group mb-4">
-                <div class="col mb-2">
-                  <label for="colorPicker">Farba</label>
+            <div class="row">
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="productPrice">Cena (€)</label>
+                  <input type="email" id="productPrice" class="form-control border-dark number-input" />
                 </div>
-                <select class="selectpicker border-dark" id="colorPicker" title="Farba" multiple aria-label="size 3 select example">
-                  <option value="red" data-content="<span class='circle red'></span>Červená"></option>
-                  <option value="green" data-content="<span class='circle green'></span>Zelená"></option>
-                  <option value="blue" data-content="<span class='circle blue'></span>Modrá"></option>
-                  <option value="purple" data-content="<span class='circle purple'></span>Fialová"></option>
-                  <option value="pink" data-content="<span class='circle pink'></span>Ružová"></option>
-                  <option value="aqua" data-content="<span class='circle aqua'></span>Tyrkysová"></option>
-                  <option value="orange" data-content="<span class='circle orange'></span>Hnedá"></option>
-                  <option value="black" data-content="<span class='circle black'></span>Čierna"></option>
-                  <option value="white" data-content="<span class='circle white'></span>Biela"></option>
-                </select>
               </div>
-            </div>
 
-            <div class="col col-lg-6 d-flex justify-content-center align-items-center">
-              <div class="form-group mb-4">
-                <div class="col mb-2">
-                  <label for="categoryPicker">Veľkosť</label>
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="productQuantity">Počet kusov</label>
+                  <input type="email" id="productQuantity" class="form-control border-dark number-input" />
                 </div>
-                <select class="selectpicker border-dark" data-size="10" id="categoryPicker" title="Farba" multiple aria-label="size 3 select example">
-                  <option value="XXXS" data-content="XXXS"></option>
-                  <option value="XXS" data-content="XXS"></option>
-                  <option value="XS" data-content="XS"></option>
-                  <option value="S" data-content="S"></option>
-                  <option value="L" data-content="L"></option>
-                  <option value="XL" data-content="XL"></option>
-                  <option value="XXL" data-content="XXL"></option>
-                  <option value="XXXL" data-content="XXXL"></option>
-                </select>
               </div>
             </div>
-          </div>
 
-          <div class="col-md-12 d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary btn-block mb-4" style="width: 200px">Pridať</button>
-          </div>
+            <div class="form-outline mb-4">
+              <label class="form-label" for="description">Popis</label>
+              <textarea class="form-control border-dark" id="description" rows="4" placeholder="Popis"></textarea>
+            </div>
 
-        </form>
-      </div>
-    </div>
-  </main>
+            <div class="mb-3">
+              <label for="formFileMultiple" class="form-label">Vloženie fotiek</label>
+              <input class="form-control border-dark" type="file" id="formFileMultiple" multiple>
+            </div>
 
-  <footer class="container-fluid">
-    <div class="row">
-      <div class="col-6">
-        <h5>Sledujte nas</h5>
-      </div>
-      <div class="col-6">
-        <h5>Kontaktujte nas</h5>
-      </div>
-    </div>
-    <hr style="height: 2px; background: white;">
-    <div class="row">
-      <div class="col-6">
-        <span>Socialne siete</span>
-        <i class="bi bi-instagram ms-2"></i>
-        <i class="bi bi-facebook ms-2"></i>
-        <i class="bi bi-google ms-2"></i>
-        <i class="bi bi-twitter ms-2"></i>
-        <i class="bi bi-linkedin ms-2"></i>
-      </div>
-      <div class="col-6">
-        <div class="mb-2">
-          <i class="bi bi-geo-alt-fill"><span class="ms-2">Slovensko, Bratislava, 841 01</span></i>
+            <div class="row">
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-group mb-4">
+                  <div class="col mb-2">
+                    <label for="colorPicker">Farba</label>
+                  </div>
+                  <select class="selectpicker border-dark" id="colorPicker" title="Farba" multiple aria-label="size 3 select example">
+                    <option value="red" data-content="<span class='circle red'></span>Červená"></option>
+                    <option value="green" data-content="<span class='circle green'></span>Zelená"></option>
+                    <option value="blue" data-content="<span class='circle blue'></span>Modrá"></option>
+                    <option value="purple" data-content="<span class='circle purple'></span>Fialová"></option>
+                    <option value="pink" data-content="<span class='circle pink'></span>Ružová"></option>
+                    <option value="aqua" data-content="<span class='circle aqua'></span>Tyrkysová"></option>
+                    <option value="orange" data-content="<span class='circle orange'></span>Hnedá"></option>
+                    <option value="black" data-content="<span class='circle black'></span>Čierna"></option>
+                    <option value="white" data-content="<span class='circle white'></span>Biela"></option>
+                    <option value="other" data-content="<span class='circle other'></span>Iná"></option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-group mb-4">
+                  <div class="col mb-2">
+                    <label for="categoryPicker">Veľkosť</label>
+                  </div>
+                  <select class="selectpicker border-dark" data-size="10" id="categoryPicker" title="Veľkosť" multiple aria-label="size 3 select example">
+                    <option value="XXXS" data-content="XXXS"></option>
+                    <option value="XXS" data-content="XXS"></option>
+                    <option value="XS" data-content="XS"></option>
+                    <option value="S" data-content="S"></option>
+                    <option value="L" data-content="L"></option>
+                    <option value="XL" data-content="XL"></option>
+                    <option value="XXL" data-content="XXL"></option>
+                    <option value="XXXL" data-content="XXXL"></option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12 d-flex justify-content-center">
+              <button type="submit" class="btn btn-primary btn-block mb-4 add_button">Pridať Produkt</button>
+            </div>
+
+          </form>
         </div>
-        <div>
-          <i class="bi bi-telephone"><span class="ms-2 me-2">(421) 456-562</span></i>
-          <i class="bi bi-printer"><span class="ms-2">(421) 456-5680</span></i>
-        </div>
-
       </div>
     </div>
-    <hr style="height: 2px; background: white;">
-    <div class="col-md-3 col-2 me-">
-      <a href="landing_page.html">
-        <img class="navbar-brand  text-center" src="images/wtech_logo.png">
-      </a>
-    </div>
-  </footer>
+  </section>
+</main>
 
-  <script>
-      // Initialize the selectpicker plugin
-      $('.selectpicker').selectpicker();
-  </script>
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <h5>Sledujte nas</h5>
+    </div>
+    <div class="col-6">
+      <h5>Kontaktujte nas</h5>
+    </div>
+  </div>
+  <hr style="height: 2px; background: white;">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <span>Socialne siete</span>
+      <i class="bi bi-instagram ms-2"></i>
+      <i class="bi bi-facebook ms-2"></i>
+      <i class="bi bi-google ms-2"></i>
+      <i class="bi bi-twitter ms-2"></i>
+      <i class="bi bi-linkedin ms-2"></i>
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <div class="mb-2">
+        <i class="bi bi-geo-alt-fill"><span class="ms-2">Slovensko, Bratislava, 841 01</span></i>
+      </div>
+      <div>
+        <i class="bi bi-telephone"><span class="ms-2 me-2">(421) 456-562</span></i>
+        <i class="bi bi-printer"><span class="ms-2">(421) 456-5680</span></i>
+      </div>
+
+    </div>
+  </div>
+  <hr style="height: 2px; background: white;">
+  <div class="col-sm-3 col-12 me-">
+    <a href="admin_main_page.html">
+      <img class="navbar-brand  text-center" src="images/wtech_logo.png">
+    </a>
+  </div>
+</footer>
+
+<script>
+    $('.selectpicker').selectpicker();
+</script>
+
 </body>
 </html>
